# CS5351-Aceleracion-de-mapas-y-construcci-n-de-grafos

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  benchmark.py  example.py  requirements.txt  simplify.py
acj/: __init__.py  graph.py  io.py  map_index.py  render.py
acj/core/src/: acj_core.cpp
acj/tests/: test_acj.py
examples/: example_acj.py  example_crime_osm.py  example_crime_visualization.py  example_realtime.py  example_simplification.py  example_simplification_osm.py  example_simplification_visual.py
src/: match.cpp
tests/: test_matcher.py
